--- a/reference/Proposal-for-LoRa-Cloud-Geolocation-V4.v1.yaml
+++ b/reference/Proposal-for-LoRa-Cloud-Geolocation-V4.v1.yaml
@@ -619,7 +619,7 @@ components:
         - lng
   securitySchemes:
     Authorization:
-      name: API Key
+      name: Athentication
       type: apiKey
       in: header
 security:
